--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "gsap": "^3.10.2",
-    "react": "^18.0.0-rc.3",
-    "react-dom": "^18.0.0-rc.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-scroll": "^1.8.4",
     "react-switch": "^6.0.0"
