--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "pugu",
   "version": "1.0.0",
+  "homepage": "https://linkcharsoft.github.io/pugu",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
-    "build": "webpack --mode=production --config webpack.config.js"
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --mode=production --config webpack.prod.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "Lukway <lukway.dev@gmail.com>",
@@ -16,8 +19,8 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "gsap": "^3.10.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-scroll": "^1.8.4",
     "react-switch": "^6.0.0"
@@ -33,6 +36,7 @@
     "eslint": "^8.9.0",
     "eslint-plugin-react": "^7.28.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.1.1",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
